Week3 Contracts Loading and crowdsale website progress bar functional

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@babel/plugin-proposal-private-property-in-object":"7.21.11",
     "hardhat": "^2.10.1"
   }
 }
