--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,136 @@
-node_modules
-.env
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Hardhat files
-/cache
-/artifacts
+# Build outputs
+dist/
+build/
+out/
+.cache/
+coverage/
 
-# TypeChain files
-/typechain
-/typechain-types
+# React build
+/build
+/dist
 
-# solidity-coverage files
-/coverage
-/coverage.json
+# Environment variables
+.env*
+!.env.example
 
-# Hardhat Ignition default folder for deployments against a local node
+# Hardhat
+cache/
+artifacts/
+typechain/
+typechain-types/
 ignition/deployments/chain-31337
 
-node_modules
-.env
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Hardhat files
-/cache
-/artifacts
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# TypeChain files
-/typechain
-/typechain-types
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
 
-# solidity-coverage files
-/coverage
-/coverage.json
+# nyc test coverage
+.nyc_output
 
-# Hardhat Ignition default folder for deployments against a local node
-ignition/deployments/chain-31337
+# Grunt intermediate storage
+.grunt
 
-node_modules
-.env
+# Bower dependency directory
+bower_components
 
-# Hardhat files
-/cache
-/artifacts
+# node-waf configuration
+.lock-wscript
 
-# TypeChain files
-/typechain
-/typechain-types
+# Compiled binary addons
+build/Release
 
-# solidity-coverage files
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor/IDE
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*~
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Solidity coverage files
 /coverage
 /coverage.json
 
